[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "NewtonNet"
description = "A Newtonian message passing network for deep learning of interatomic potentials and forces"
version = "2.1.0"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Teresa Head-Gordon", email = "thg@berkeley.edu" },
]
keywords = [
    "Machine Learning", 
    "Data Mining", 
    "Quantum Chemistry", 
    "Molecular Dynamics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "ase",
    "tqdm",
    "pyyaml",
    "wandb",
    "torch",
    "torch_geometric",
    "torch_scatter",
    "torch_cluster",
    "les@git+https://github.com/ChengUCB/les",
]

[project.urls]
repository = "https://github.com/THGLab/NewtonNet"